---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 4/6/25
  Major Features:
    - Added dungeons.
  Balancing:
    - Lower-valued trades are now more common in the more distant hexes from spawn on all planets.
    - Fewer of the more distant hexes than the ones near spawn have resources on all planets.
  Optimizations:
    - Greatly optimized hex generation and overall UPS.
    - Further optimized hex generation ahead of time in uncharted areas (for charting at fast speeds).
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 1/6/25
  Features:
    - Added many more quests and rewards.
    - Added button in catalog to open the item in the Factoriopedia.
  Minor Features:
    - The parameter to the /hex-pool-size command can now be omitted to check the current hex pool size.
  Changes:
    - Sentient Spider is now equipped with 1x [item=teslagun] instead of 4x [item=rocket-launcher].
    - Sentient Spider now has a larger equipment grid.
    - Trades can now only be made with researched qualities.
    - Changed silver rank bonus to guarantee at least one interplanetary trade for every item on every planet.
    - Clicking on an item in a trade when viewed in a hex core now opens up that item in the catalog instead of the Factoriopedia.
    - There is now a confirmation for switching hex core modes to avoid accidental changes.
  Gui:
    - Changed the sink and generator mode icons.
    - Changed the red star rank bonus description.
    - Removed the line that separated quest conditions and rewards from the labels.
    - Added images to all quests.
    - Changed the style of total bought/sold statistics in hex core GUIs.
    - Changed the teleport button sprite.
  Bugfixes:
    - Fixed the factoriopedia simulation for hexaprisms and hexic underground belts.
    - Added localization for the crystalline fuel tech and some commands.