@@ -16,6 +16,7 @@ hexa-quality-module=[color=128,16,0]Hexa Quality Module[.color]
 sentient-spider=Sentient Spider
 sentient-spider-teslagun=Sentient Spider teslagun
 crystalline-fuel=Crystalline fuel
+poison-rocket=Poison rocket
 
 [item-description]
 hex-coin=[font=heading-1][color=yellow]TIER 1 COIN[.color][.font]\nCan be traded. Primarily used on [planet=nauvis].\n\nAuto-converted to higher tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
@@ -28,6 +29,7 @@ tesla-discharge-defense-equipment=Damages, pushes back and stuns nearby enemies 
 tesla-destroyer=One of the more advanced combat robots. Follows the player and shoots arcing bolts of electricity at nearby enemies.
 demolisher-capsule=Deploys demolishers. The good kinds.
 sentient-spider=(WORK IN PROGRESS)\nAlthough they don't do anything yet, you can build these now. They'll wake up later.\n\n[font=heading-2][color=yellow]This spidertron has undergone an artificial imbuement of consciousness and spiritual energy. Her superintelligence, benignity, and fascination with industry leads her to welcome your presence into her world of Factorio. The factory must grow.[.color][.font]
+poison-rocket=More potent than [item=poison-capsule].
 
 [entity-name]
 hex-core=Hex Core
@@ -60,6 +62,7 @@ demolisher=Demolisher
 sentient-spider=Sentient Spider
 energized-thruster-fuel=Energized thruster fuel
 crystalline-fuel=Crystalline fuel
+poison-rocket=Poison rocket
 
 [technology-description]
 hexic-logistics=The most impressive belt system.
@@ -68,6 +71,7 @@ hexa-modules=Pushing the iron gear wheels [img=item.iron-gear-wheel] beyond thei
 demolisher=What happens when you attach the most powerful weapon to the most versatile machine?
 sentient-spider=This is their world, and you're just living in it. Good thing they're on your side, though. Could you imagine if they got a kick out of griefing you?
 energized-thruster-fuel=Give your spaceships the zoomies.
+poison-rocket=Basically a [item=rocket], but it also delivers a lingering poison cloud.
 
 [recipe-name]
 energized-thruster-fuel=Energized thruster fuel
