@@ -13,3 +13,4 @@ require("prototypes.combat_robot")
 require("prototypes.projectile")
 require("prototypes.equipment_grid")
 require("prototypes.dungeon")
+require("prototypes.ammo")
